# Alisher_lessons

./: Readme.md
.github/: level1_pipeline.yml
.github/workflows/: level1_build.yml  level1_pipeline.yml  level1_test.yml  level2_build.yml  level2_test.yml
.github/workflows/level1/: level1_build.yml  level1_test.yml
Alisher_level_1/: CMakeLists.txt
Alisher_level_1/src/: CMakeLists.txt  Variable.cpp  Variable.hpp
Alisher_level_1/test/: CMakeLists.txt  main.cpp  variable.cpp  variable2.cpp
Alisher_level_2/istorage/: CMakeLists.txt
Alisher_level_2/istorage/include/storagelib/: CMakeLists.txt  container.cpp  container.hpp  pch.hpp  storage.hpp  variable.cpp  variable.hpp
Alisher_level_2/istorage/test/: CMakeLists.txt  storage.test.cpp
